tests/core/ill-typed/unexpected-type-for-expression/bad-if-1.stella
language core;

fn main(x : Nat) -> Nat {
    return if x then 0 else succ(0);
}